src/FinancialForce Accounting/objects/codaYearEndLog__c.object
<CustomObject>
    <customHelpPage>codahelpyearendlog</customHelpPage>
    <description>Stores information and error during the year end process.</description>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PL - Create Journals</fullName>
                </value>
                <value>
                    <fullName>PL - Post Journals</fullName>
                </value>
                <value>
                    <fullName>BS - Create Journals</fullName>
                </value>
                <value>
                    <fullName>BS - Post Journals</fullName>
                </value>
                <value>
                    <fullName>Reverse Journals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <referenceTo>codaYear__c</referenceTo>
        <relationshipLabel>Year End Logs</relationshipLabel>
        <relationshipName>YearEndLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Year End Log</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>YEL{000000}</displayFormat>
        <label>Year End Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Year End Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>